SISD/HLS/solution1/csim/report/sisd_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../test.cpp in debug mode
csim.mk:79: recipe for target 'obj/test.o' failed
../../../test.cpp: In function 'int main()':
../../../test.cpp:38:53: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type 'int'
       sisd(DATA_A[i], DATA_B[i], ALU_OPERATION[i], 0);
                                                     ^
../../../test.cpp:5:6: note:   initializing argument 4 of 'void sisd(int, int, int, int&)'
 void sisd(int a, int b, int op, int& c);
      ^~~~
make: *** [obj/test.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
